[package]
name = "web3-keystore"
version = "0.3.0"
authors = ["Muji <muji@tmpfs.org>", "Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/web3-keystore"
repository = "https://github.com/tmpfs/web3-keystore"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.7.4"
ctr = "0.8.0"
digest = "0.10.3"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.0"
pbkdf2 = "0.10.0"
rand = "0.8.5"
scrypt = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.1"
sha3 = "0.10.0"
thiserror = { version = "1.0.22", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
anyhow = "1"
